h1タグを中央に配置してみた

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="snow-container">
+      <h1>Snow Fall</h1>
       <div class="snow"></div>
     </div>
     <script src="./script.js"></script>
